Rebrand to Cookie Chef and Upgrade to Manifest V3

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>ETC</title>
+    <title>Cookie Chef</title>
     <link rel="stylesheet" type="text/css" href="/css/smoothness/jquery-ui-1.12.1.custom.min.css" />
     <link rel="stylesheet" type="text/css" href="/lib/uniform/uniform.default.css" />
     <link rel="stylesheet" type="text/css" href="/css/opensans/opensans.css">
@@ -271,6 +271,7 @@
         <div id="submitDiv">
             <i id="submitButton" class="fa fa-check" i18n_title="Alert_submitAll"></i>
             <a id="helpButton" i18n="help" href="http://www.editthiscookie.com/start/" target="_blank">
+            <a id="helpButton" i18n="help" href="https://cookiechef.dev/start/" target="_blank">
             </a>
         </div>
     </div>
