--- a/devtools/devtools-page.html
+++ b/devtools/devtools-page.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Cookie Inspector</title>
+    <title>Cookie Chef Inspector</title>
 
     <script src="/lib/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="/lib/object-watch.js" type="text/javascript"></script>
