--- a/options_pages/support.html
+++ b/options_pages/support.html
@@ -25,7 +25,7 @@
 
 <body>
     <div id="navigation">
-        <h1>EditThisCookie</h1>
+        <h1>Cookie Chef</h1>
         <ul>
             <li class="chooser" id="getting_started" i18n="getting_started"></li>
             <li class="chooser" id="user_preferences" i18n="Options"></li>
@@ -36,31 +36,31 @@
 
     <div id="support-box" class="box">
 
-        <div class="linkify" lnk="https://chrome.google.com/webstore/detail/edit-this-cookie/fngmhnnpilhplaeedifhccceomclgfbg/reviews">
+        <div class="linkify" lnk="https://cookiechef.dev/reviews">
             <div class="section-title" i18n="Rate_ETC"></div>
             <i style="color: #FF9D00; font-size: 4em; margin-top:5px; margin-right:5px;" class="fa fa-star fa-fw"></i>
             <span i18n="Rate_Us_Intro"></span>
         </div>
         <hr>
-        <div class="linkify" lnk="http://www.getlocalization.com/editthiscookie/">
+        <div class="linkify" lnk="https://cookiechef.dev/translate/">
             <div class="section-title" i18n="translation"></div>
             <i style="color: #8820BD; font-size: 4em; margin-top:5px; margin-right:5px;" class="fa fa-comment fa-fw"></i>
             <span i18n="translationIntro"></span>
         </div>
         <hr>
-        <div class="linkify" lnk="https://github.com/fcapano/Edit-This-Cookie/issues">
+        <div class="linkify" lnk="https://github.com/yourusername/cookie-chef/issues">
             <div class="section-title" i18n="bugsFeatureRequest"></div>
             <i style="color: #00D6C1; font-size: 4em; margin-top:5px; margin-right:5px;" class="fa fa-bug fa-fw"></i>
             <span i18n="bugsFeatureRequestIntro"></span>
         </div>
         <hr>
-        <div class="linkify" lnk="https://github.com/fcapano/Edit-This-Cookie">
+        <div class="linkify" lnk="https://github.com/yourusername/cookie-chef">
             <div class="section-title" i18n="Source_Code"></div>
             <i style="color: #25BD20; font-size: 4em; margin-top:5px; margin-right:5px;" class="fa fa-code fa-fw"></i>
             <span i18n="Source_Code_Intro" i18n_argument="GitHub"></span>
         </div>
         <hr>
-        <div class="linkify" lnk="mailto:support@editthiscookie.com?Subject=About Edit This Cookie">
+        <div class="linkify" lnk="mailto:support@cookiechef.dev?Subject=About Cookie Chef">
             <div class="section-title" i18n="contacts"></div>
             <i style="color: #0034C4; font-size: 4em; margin-top:5px; margin-right:5px;" class="fa fa-envelope-o fa-fw"></i>
             <span i18n="contactsIntro"></span>
