--- a/options_pages/user_preferences.html
+++ b/options_pages/user_preferences.html
@@ -27,7 +27,7 @@
 
 <body>
     <div id="navigation">
-        <h1>EditThisCookie</h1>
+        <h1>Cookie Chef</h1>
         <ul>
             <li class="chooser" id="getting_started" i18n="getting_started"></li>
             <li class="chooser selected" id="user_preferences" i18n="Options"></li>
